@@ -1,15 +1,15 @@
-6f6ab8ab053625e0b1b9d8ce9b340f9a *ChangeLog
-a0a863a40a2525f3d7d94c2317d96aaf *DESCRIPTION
+90d11268be7b670285b780df89e38821 *ChangeLog
+e7ebe78ae0d8846bf6e1990171fa9e19 *DESCRIPTION
 06cea66183c9283815eb12f6a4aa9fc7 *NAMESPACE
 a23fb38129acddf402f4bbe1c427dcce *R/BackTest.R
 883aa983861e9f3ddeece978709658ab *R/ClassMethods.R
 d52556c84513cafc9b9e3829017333e5 *R/Estimate.R
 b3010fe73e2906183ab81e96234f6ed1 *R/Figures.R
 527c4b34dd1040c83368bb8f6d727e99 *R/Lag.R
-e25b75076a25a2f216754f942de2bcae *R/RcppExports.R
+8f55523e80c383c52799d62e8791d571 *R/RcppExports.R
 7cee4e859b648e7544a844e4163bed05 *R/Utils.R
-18120afbb6e981a8ede8e445b2c32b5d *README.md
-8d6e84024043e2d633d5de82ec762e6f *build/partial.rdb
+92b8584fb938e9ad392ed966fa7d7fed *README.md
+b52aabe9a2757fc86742763db9dafc9b *build/partial.rdb
 3e099d574cfae264d7660bbd444b2069 *data/SimData.rda
 c318b60519ee805a9b844e9f16666780 *data/USData.rda
 d2f492e36096506bdad5658cf6dd79a1 *data/USRecessions.rda
@@ -21,9 +21,9 @@ d2f492e36096506bdad5658cf6dd79a1 *data/USRecessions.rda
 47c2caf5eaf0f33244e574f62647765c *man/PowerSet.Rd
 130669f5cf1e188df08ebbdf0e095a38 *man/SimData.Rd
 080e4a3bebe7c7d44f4200c495799fde *man/SimulateDLM.Rd
-66969e9796fca0cb395030322356e29f *man/USData.Rd
-798b0775cccc89709e0278c552b21580 *man/USRecessions.Rd
-41345d0d918d84ee62a94750df8946ea *man/eDMA-package.Rd
+7fd52213ffba62d0d4fbe2d6bdd291f4 *man/USData.Rd
+09b6807837a57f8ecb2870d2ec10ebfe *man/USRecessions.Rd
+f07214d4072dee4d803aaca6416abbba *man/eDMA-package.Rd
 e6a313d11b9237c2e460d3cc54df87ab *src/Combinations.cpp
 302931332fb6083fd7cceb2bb6a0ee5f *src/Combinations.h
 9f4b175e618da07bbd5e4631a76a5c33 *src/Distributions.cpp
@@ -33,7 +33,7 @@ cf832c2a1b7cff9295999e466db706fe *src/Estimate.h
 32cc8e60219a0dc8525f878a996e06f5 *src/Estimate_par.cpp
 1310cb7481bd47420ac898d7a8c0fba9 *src/Makevars
 1310cb7481bd47420ac898d7a8c0fba9 *src/Makevars.win
-4f9fd9d4fe09f22087ba954d7216eeee *src/RcppExports.cpp
+ae2853383ec404f0a24be66945a64dff *src/RcppExports.cpp
 3901fd68f321fb613ed6f96f12118d86 *src/Simulate.cpp
 ec177711d63e92bc43bdd25b41db2e9f *src/Utils.cpp
 6766c8164e1f5293ee35ab23fce71aab *src/Utils.h
