@@ -7,3 +7,7 @@
 2018-27-08 Leopoldo Catania <leopoldo.catania@econ.au.dk>
   * DESCRIPTION (Version): New version is 1.5-3.
   * Removing  \donttest from documentation
+2025-12-05  Leopoldo Catania <leopoldo.catania@econ.au.dk>
+  * DESCRIPTION (Version): New version is 1.5-4.
+  * Fixing the note: "Found the following Rd file(s) with Rd \link{} targets missing package anchors:"
+  * Adding ORCID
